--- a/baidu-index-hunter-frontend/package.json
+++ b/baidu-index-hunter-frontend/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.4.3",
     "file-saver": "^2.0.5",
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.8.3",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5",
     "xlsx": "^0.18.5"
