refactor: remove obsolete files and update crawler architecture
- Deleted app.py, task_executor.py, and various spider modules to streamline the codebase and remove unused components.
- Updated the task scheduler to utilize Scrapy for task execution, enhancing the overall architecture and maintainability.
- Adjusted environment configuration for Scrapy settings, including worker limits and request intervals, to optimize crawling performance.
- Improved requirements.txt to include necessary Scrapy dependencies, ensuring a complete setup for the new architecture.

--- a/baidu-index-hunter-backend/.env.example
+++ b/baidu-index-hunter-backend/.env.example
@@ -65,17 +65,19 @@ COOKIE_ROTATION_STRATEGY=round_robin
 COOKIE_MAX_USAGE_PER_DAY=1800
 
 # ====================
-# 爬虫配置
+# Scrapy 爬虫配置
 # ====================
-SPIDER_MIN_INTERVAL=0.1
-SPIDER_MAX_INTERVAL=0.3
-SPIDER_DEFAULT_INTERVAL=0.2
-SPIDER_RETRY_TIMES=2
-SPIDER_TIMEOUT=10
-SPIDER_MAX_WORKERS=20
-SPIDER_MAX_CONSECUTIVE_FAILURES=2
-SPIDER_FAILURE_MULTIPLIER=1.1
-SPIDER_USER_AGENT_ROTATION=True
+# 全局并发请求数
+SPIDER_MAX_WORKERS=16
+# 每域名并发请求数
+SPIDER_CONCURRENT_PER_DOMAIN=8
+# 请求间隔（秒）
+SPIDER_DEFAULT_INTERVAL=0.3
+# 请求超时（秒）
+SPIDER_TIMEOUT=30
+# 失败重试次数
+SPIDER_RETRY_TIMES=3
+# 是否启用代理
 SPIDER_PROXY_ENABLED=False
 SPIDER_PROXY_URL=
 SPIDER_PROXY_AUTH=
