--- a/baidu-index-hunter-frontend/package.json
+++ b/baidu-index-hunter-frontend/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.1.7",
     "socket.io-client": "^4.8.3",
     "vue": "^3.4.19",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.2.5",
     "xlsx": "^0.18.5"
   },
