--- a/baidu-index-hunter-frontend/package.json
+++ b/baidu-index-hunter-frontend/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "translate": "translate"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "echarts": "^5.6.0",
     "element-plus": "^2.4.3",
     "file-saver": "^2.0.5",
+    "language-translate": "^2.2.5",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.8.3",
     "vue": "^3.4.19",
