--- a/baidu-index-hunter-backend/.env.example
+++ b/baidu-index-hunter-backend/.env.example
@@ -1,14 +1,5 @@
 # ====================
-# BaiduIndexHunter 环境变量配置
-# ====================
-# 此文件包含敏感配置（密码、密钥等），不会提交到 Git
-# 其他配置请在前端"设置"页面或数据库 system_config 表中修改
-# 
-# 配置优先级：数据库 > 环境变量 > 默认值
-# ====================
-
-# ====================
-# MySQL 数据库配置（必填）
+# MySQL 数据库配置
 # ====================
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
@@ -17,7 +8,7 @@ MYSQL_PASSWORD=你的MySQL密码
 MYSQL_DB=BaiduIndexHunter
 
 # ====================
-# Redis 配置（必填）
+# Redis 配置
 # ====================
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -25,12 +16,90 @@ REDIS_DB=0
 REDIS_PASSWORD=
 
 # ====================
-# API 密钥配置
+# Flask 应用配置
 # ====================
-API_SECRET_KEY=baidu_index_hunter_secret_key_请修改此密钥
+FLASK_HOST=0.0.0.0
+FLASK_PORT=5001
+FLASK_DEBUG=false
 
 # ====================
-# 阿里云 OSS 配置（可选）
+# API 配置
+# ====================
+API_HOST=0.0.0.0
+API_PORT=5001
+API_DEBUG=True
+API_SECRET_KEY=baidu_index_hunter_secret_key_请修改此密钥
+API_TOKEN_EXPIRE=86400
+API_CORS_ORIGINS=*
+
+# ====================
+# 任务配置
+# ====================
+MAX_CONCURRENT_TASKS=20
+TASK_QUEUE_CHECK_INTERVAL=5
+DEFAULT_TASK_PRIORITY=5
+MAX_RETRY_COUNT=3
+RETRY_DELAY=120
+
+# ====================
+# 登录和健康检查配置
+# ====================
+LOGIN_INTERVAL=86400
+HEALTH_CHECK_INTERVAL=3600
+
+# ====================
+# Cookie 检查配置
+# ====================
+COOKIE_CHECK_INTERVAL=180
+AB_SR_UPDATE_INTERVAL=3600
+RESUME_TASK_CHECK_INTERVAL=300
+
+# ====================
+# Cookie 管理配置
+# ====================
+COOKIE_MIN_AVAILABLE_COUNT=10
+COOKIE_MAX_LOGIN_RETRY=2
+COOKIE_BLOCK_COOLDOWN=1800
+COOKIE_EXPIRATION_BUFFER=3600
+COOKIE_ROTATION_STRATEGY=round_robin
+COOKIE_MAX_USAGE_PER_DAY=1800
+
+# ====================
+# 爬虫配置
+# ====================
+SPIDER_MIN_INTERVAL=0.1
+SPIDER_MAX_INTERVAL=0.3
+SPIDER_DEFAULT_INTERVAL=0.2
+SPIDER_RETRY_TIMES=2
+SPIDER_TIMEOUT=10
+SPIDER_MAX_WORKERS=20
+SPIDER_MAX_CONSECUTIVE_FAILURES=2
+SPIDER_FAILURE_MULTIPLIER=1.1
+SPIDER_USER_AGENT_ROTATION=True
+SPIDER_PROXY_ENABLED=False
+SPIDER_PROXY_URL=
+SPIDER_PROXY_AUTH=
+
+# ====================
+# 日志配置
+# ====================
+LOG_LEVEL=INFO
+LOG_RETENTION=7
+LOG_FORMAT=%(asctime)s - %(levelname)s - %(name)s - %(message)s
+LOG_FILE_SIZE=10485760
+LOG_BACKUP_COUNT=5
+
+# ====================
+# 输出配置
+# ====================
+OUTPUT_DEFAULT_FORMAT=csv
+OUTPUT_CSV_ENCODING=utf-8-sig
+OUTPUT_EXCEL_SHEET_NAME=BaiduIndex
+OUTPUT_FILE_NAME_TEMPLATE={task_type}_{timestamp}
+OUTPUT_DIR=./output
+
+# ====================
+# 阿里云OSS配置 (可选)
 # ====================
 OSS_URL=
 OSS_ENDPOINT=
@@ -38,22 +107,3 @@ OSS_ACCESS_KEY_ID=
 OSS_ACCESS_KEY_SECRET=
 OSS_BUCKET_NAME=
 OSS_REGION=
-
-# ====================
-# 以下配置可在数据库 system_config 表中修改
-# 这里只是备用/覆盖用
-# ====================
-
-# API 配置
-# API_HOST=0.0.0.0
-# API_PORT=5001
-# API_DEBUG=false
-
-# 爬虫配置
-# SPIDER_MAX_WORKERS=16
-# SPIDER_DEFAULT_INTERVAL=0.3
-# SPIDER_TIMEOUT=30
-# SPIDER_RETRY_TIMES=3
-
-# 日志配置
-# LOG_LEVEL=INFO
