refactor: 统一管理API基础URL并引入环境变量配置。

--- a/baidu-index-hunter-backend/config/.env.example
+++ b/baidu-index-hunter-backend/config/.env.example
@@ -1,6 +1,7 @@
 # ====================
 # MySQL 数据库配置
 # ====================
+# 重要：MYSQL_PASSWORD 必须配置，禁止使用默认密码
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
@@ -25,10 +26,11 @@ FLASK_DEBUG=false
 # ====================
 # API 配置
 # ====================
+# 重要：API_SECRET_KEY 必须配置且足够复杂，禁止使用默认密钥
 API_HOST=0.0.0.0
 API_PORT=5001
 API_DEBUG=True
-API_SECRET_KEY=baidu_index_hunter_secret_key_请修改此密钥
+API_SECRET_KEY=请修改为随机生成的复杂密钥
 API_TOKEN_EXPIRE=86400
 API_CORS_ORIGINS=*
 
