feat: 为后端添加API密钥认证，并为前端提供相应的配置界面。

--- a/baidu-index-hunter-frontend/.env.example
+++ b/baidu-index-hunter-frontend/.env.example
@@ -3,6 +3,10 @@
 # 生产环境：若前后端同域，使用 /api；若分离部署，填写完整地址
 VITE_API_BASE_URL=/api
 
+# API 密钥（可选，与后端 config/.env 中 API_SECRET_KEY 保持一致）
+# 配置后无需在设置页面每次输入，一次配置永久生效
+# VITE_API_SECRET_KEY=你的密钥
+
 # WebSocket 地址（可选，未设置时自动推导）
 # 开发环境：自动指向同主机 5001 端口
 # 生产环境：同域则自动使用当前域名
