--- a/baidu-index-hunter-backend/config/.env.example
+++ b/baidu-index-hunter-backend/config/.env.example
@@ -32,6 +32,7 @@ API_PORT=5001
 API_DEBUG=True
 API_SECRET_KEY=请修改为随机生成的复杂密钥
 API_TOKEN_EXPIRE=86400
+# 生产环境建议设置为具体域名，如：http://localhost:5173,https://your-domain.com
 API_CORS_ORIGINS=*
 
 # ====================
