--- a/baidu-index-hunter-backend/requirements.txt
+++ b/baidu-index-hunter-backend/requirements.txt
@@ -1,20 +1,20 @@
-# Web框架
-Flask==2.0.1
-Flask-Cors==3.0.10
-flasgger==0.9.5
-flask-socketio==5.1.1
+# Web框架（已升级以修复已知安全漏洞）
+Flask>=2.3.0,<4
+Flask-Cors>=4.0.0
+flasgger>=0.9.5
+flask-socketio>=5.3.0
 
 # 数据库
-pymysql==1.0.2
+pymysql>=1.0.2
 sqlmodel>=0.0.14
 sqlalchemy>=2.0.0
 cryptography>=41.0.0
 
 # 缓存
-redis==3.5.3
+redis>=5.0.0
 
-# HTTP客户端
-requests==2.26.0
+# HTTP客户端（已升级以修复已知安全漏洞）
+requests>=2.31.0
 
 # 爬虫相关
 selenium>=4.10.0
@@ -34,12 +34,17 @@ loguru>=0.6.0
 python-multipart>=0.0.5
 aiofiles>=0.8.0
 
-# 其他依赖
-Werkzeug==2.0.1
-marshmallow==3.13.0
-PyJWT==2.1.0
+# 其他依赖（已升级以修复已知安全漏洞）
+Werkzeug>=2.3.0,<4
+marshmallow>=3.13.0
+PyJWT>=2.8.0
 fake-useragent==1.1.1
-pandas==1.3.3
+numpy>=1.24.0
+pandas>=2.0.0
 pydantic>=2.0.0
 openpyxl>=3.0.0
 pyarrow>=14.0.0
+
+dotenv
+PyExecJS
+tqdm
