--- a/baidu-index-hunter-backend/requirements.txt
+++ b/baidu-index-hunter-backend/requirements.txt
@@ -1,50 +1,68 @@
-# Web框架（已升级以修复已知安全漏洞）
-Flask>=2.3.0,<4
-Flask-Cors>=4.0.0
+# ====================
+# BaiduIndexHunter 2.0 后端依赖
+# Python 版本要求: 3.11.x 或 3.12.x
+# 生成时间: 2026-02-07
+# ====================
+
+# Web 框架
+Flask>=3.0.0,<4.0.0
+flask-cors>=5.0.0
+Flask-SocketIO>=5.3.0
 flasgger>=0.9.5
-flask-socketio>=5.3.0
+Werkzeug>=3.0.0,<4.0.0
+Jinja2>=3.1.0
 
 # 数据库
-pymysql>=1.0.2
+PyMySQL>=1.1.0
+SQLAlchemy>=2.0.0,<3.0.0
 sqlmodel>=0.0.14
-sqlalchemy>=2.0.0
 cryptography>=41.0.0
 
 # 缓存
 redis>=5.0.0
 
-# HTTP客户端（已升级以修复已知安全漏洞）
+# HTTP 客户端
 requests>=2.31.0
+urllib3>=2.0.0
+certifi>=2023.0.0
 
 # 爬虫相关
 selenium>=4.10.0
-webdriver-manager>=3.8.0
+webdriver-manager>=4.0.0
 
 # 任务调度
-apscheduler>=3.9.0
-schedule==1.2.1
+APScheduler>=3.10.0
+schedule>=1.2.0
 
-# 数据验证 (兼容现有环境)
-python-dotenv==0.19.1
-
-# 日志
-loguru>=0.6.0
-
-# 其他工具
-python-multipart>=0.0.5
-aiofiles>=0.8.0
-
-# 其他依赖（已升级以修复已知安全漏洞）
-Werkzeug>=2.3.0,<4
-marshmallow>=3.13.0
-PyJWT>=2.8.0
-fake-useragent==1.1.1
-numpy>=1.24.0
+# 数据处理
 pandas>=2.0.0
-pydantic>=2.0.0
-openpyxl>=3.0.0
+numpy>=1.24.0
+openpyxl>=3.1.0
 pyarrow>=14.0.0
 
-dotenv
-PyExecJS
-tqdm
+# 数据验证
+pydantic>=2.0.0
+marshmallow>=3.20.0
+
+# 日志
+loguru>=0.7.0
+tqdm>=4.65.0
+
+# 环境变量
+python-dotenv>=1.0.0
+
+# 加密与认证
+PyJWT>=2.8.0
+
+# WebSocket
+python-socketio>=5.10.0
+python-engineio>=4.8.0
+simple-websocket>=1.0.0
+websocket-client>=1.6.0
+
+# 其他工具
+aiofiles>=23.0.0
+python-multipart>=0.0.6
+fake-useragent>=1.1.0
+PyExecJS>=1.5.1
+PyYAML>=6.0.0
