feat: 新增英文贡献指南，并更新中英文README和中文贡献指南，同时调整后端依赖和启动脚本。

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ====================
-# BaiduIndexHunter 2.0 - Git Ignore Rules
+# BaiduIndexHunter - Git Ignore Rules
 # ====================
 
 # ====================
