--- a/baidu-index-hunter-backend/requirements.txt
+++ b/baidu-index-hunter-backend/requirements.txt
@@ -1,5 +1,5 @@
 # ====================
-# BaiduIndexHunter 2.0 后端依赖
+# BaiduIndexHunter 后端依赖
 # Python 版本要求: 3.11.x 或 3.12.x
 # 生成时间: 2026-02-07
 # ====================
